# cuda-practice

./: .gitignore  CMakeLists.txt  README.md  main.cu
lecture/1/: adding_vectors.cu
lecture/2/: complex_function.cu  cuda_streams.cu  pinned_memory.cu
lecture/3/: solver_chaos.cu  solver_slau.cu
lecture/4/: matmul_optimized.cu  nbody.cu
lecture/5/: array_processing.cu  matrix_mul.cu  nbody_shared.cu
lecture/openacc/: async_pinned_example.cpp  compile.sh  matrix_mul.cpp  nbody.cpp  nested_loops_example.cpp  sin_sqrt_example.cpp  solver_slau.cpp  solver_snau.cpp
